--- a/WishUp.html
+++ b/WishUp.html
@@ -91,13 +91,60 @@
       </p>
     </div>
   </div>
-
 </section>
-
 
 <section>
-  <h3>TO BE CONTINUED</h3>
+  <div class="wrapper">
+    <h3>REMEMBER THAT MOVIE UP?</h3>
+  </div>
+  <div class="wrapper">
+    <div class="block">
+      <p>
+        It's the movie in which Carl - an elderly widowed man, tries to fulfil his late wife - Ellie's lifetime wish of
+        getting to the Paradise Falls against all odds. He gets there in a balloons floating house with helps from
+        special friends.
+        <br /><br />
+        There must be many Carls and Ellies in real life, but without balloons floating houses and special friends.
+        So this social network serves as an asset for the community to help the real life Carls fulfiling their
+        lifetime wishes - with kindness and compassion.
+      </p>
+    </div>
+  </div>
+
+  <div class="wrapper">
+    <h5>SO, CARL'S STORY WOULD LOOK LIKE</h5>
+  </div>
+
+  <div class="wrapper">
+    <div class="block no-text-block">
+      <video playsinline autoplay loop muted id="wishup-intro-video">
+        <source src="./Assets/wishup-intro.mov" type="video/mp4" />
+        Sorry it's a really nice video your browser failed to load.
+      </video>
+    </div>
+  </div>
+
+  <div class="wrapper light-bg-f9f9f9">
+    <div class="block">
+      <p>
+        Main actions that the audience can do to help Carl are: <strong>Wish luck</strong> to Carl,
+        <strong>Donate</strong>, and <strong>Offer</strong> Carl something.
+        And of course there are the sharing and commenting ones as well.
+        <br /><br />
+        While the 'wish luck' (same concept as the 'like') and 'Donate' are fairly familiar, 'Offer' seems a bit different.
+        It's for someone who wants to help by offering something that is not money or the good luck wish.
+      </p>
+    </div>
+    <div class="block no-text-block">
+      <img alt="Offer example" class="appScreen" src="./Assets/wishup-offer.png" />
+    </div>
+  </div>
 </section>
+
+<section>
+  <h3>IN PROGRESS</h3>
+</section>
+
 
 
 
