--- a/scheckerIntro.html
+++ b/scheckerIntro.html
@@ -109,7 +109,7 @@
 
       <div class="block no-text-block">
         <div class="hiw-video">
-          <video playsinline autoplay loop muted>
+          <video playsinline autoplay loop muted class="appScreen">
             <source src="./Assets/schecker-hiw-answer.mov" type="video/mp4" />
             Sorry it's a really nice video your browser failed to load.
           </video>
@@ -153,7 +153,7 @@
 
       <div class="block no-text-block">
         <div class="hiw-video">
-          <video playsinline autoplay loop muted>
+          <video playsinline autoplay loop muted class="appScreen">
             <source src="./Assets/schecker-hiw-book.mov" type="video/mp4" />
             Sorry it's a really nice video your browser failed to load.
           </video>
@@ -182,7 +182,7 @@
 
       <div class="block no-text-block">
         <div class="hiw-video">
-          <video playsinline autoplay loop muted>
+          <video playsinline autoplay loop muted class="appScreen">
             <source src="./Assets/schecker-hiw-track.mov" type="video/mp4" />
             Sorry it's a really nice video your browser failed to load.
           </video>
@@ -228,7 +228,7 @@
       </p>
     </div>
     <div class="block no-text-block">
-      <video playsinline autoplay loop muted>
+      <video playsinline autoplay loop muted class="appScreen">
         <source src="./Assets/scheckerUX-profile.mov" type="video/mp4" />
         Sorry it's a really nice video your browser failed to load.
       </video>
@@ -239,7 +239,7 @@
   <div class="wrapper odd">
 
     <div class="block no-text-block">
-      <video playsinline autoplay loop muted>
+      <video playsinline autoplay loop muted class="appScreen">
         <source src="./Assets/scheckerUX-symptoms.mov" type="video/mp4" />
         Sorry it's a really nice video your browser failed to load.
       </video>
@@ -271,7 +271,7 @@
       </p>
     </div>
     <div class="block no-text-block">
-      <video playsinline autoplay loop muted>
+      <video playsinline autoplay loop muted class="appScreen">
         <source src="./Assets/scheckerUX-result.mov" type="video/mp4" />
         Sorry it's a really nice video your browser failed to load.
       </video>
@@ -282,7 +282,7 @@
   <div class="wrapper odd">
 
     <div class="block no-text-block">
-      <video playsinline autoplay loop muted>
+      <video playsinline autoplay loop muted class="appScreen">
         <source src="./Assets/scheckerUX-book.mov" type="video/mp4" />
         Sorry it's a really nice video your browser failed to load.
       </video>
@@ -326,7 +326,7 @@
       </p>
     </div>
     <div class="block no-text-block">
-      <video playsinline autoplay loop muted>
+      <video playsinline autoplay loop muted class="appScreen">
         <source src="./Assets/scheckerUX-appointments.mov" type="video/mp4" />
         Sorry it's a really nice video your browser failed to load.
       </video>
@@ -337,7 +337,7 @@
   <div class="wrapper odd">
 
     <div class="block no-text-block">
-      <video playsinline autoplay loop muted>
+      <video playsinline autoplay loop muted class="appScreen">
         <source src="./Assets/scheckerUX-track.mov" type="video/mp4" />
         Sorry it's a really nice video your browser failed to load.
       </video>
