--- a/WishUp.html
+++ b/WishUp.html
@@ -71,7 +71,7 @@
     </div>
       <div class="block">
         <p>
-          A social network for the community to help fulfiling lifetime wishes of the elderly,
+          A social network for the community to help fulfillling lifetime wishes of the elderly,
           and those in special circumtances.
         </p>
       </div>
@@ -87,62 +87,66 @@
     <div class="block">
       <p>
         <strong>I believe everyone (well, most of everyone) has at least a lifetime wish, yet not all was/is fortunate enough
-        to fulfil it while they still have the time and assets to.</strong>
+        to fulfill it while they still have the time and assets to.</strong>
       </p>
     </div>
   </div>
 </section>
 
-<section>
-  <div class="wrapper">
-    <h3>REMEMBER THAT MOVIE UP?</h3>
-  </div>
+<section id="wishup-remember">
+  <h3>REMEMBER THAT MOVIE UP?</h3>
   <div class="wrapper">
     <div class="block">
       <p>
-        It's the movie in which Carl - an elderly widowed man, tries to fulfil his late wife - Ellie's lifetime wish of
+        It's the movie in which Carl - an elderly widowed man, tries to fulfill his late wife - Ellie's lifetime wish of
         getting to the Paradise Falls against all odds. He gets there in a balloons floating house with helps from
         special friends.
         <br /><br />
         There must be many Carls and Ellies in real life, but without balloons floating houses and special friends.
-        So this social network serves as an asset for the community to help the real life Carls fulfiling their
+        So this social network serves as an asset for the community to help the real life Carls fulfilling their
         lifetime wishes - with kindness and compassion.
       </p>
     </div>
   </div>
 
-  <div class="wrapper">
-    <h5>SO, CARL'S STORY WOULD LOOK LIKE</h5>
-  </div>
 
-  <div class="wrapper">
+  <div class="wrapper light-bg-f9f9f9">
+    <div class="block">
+      <h5>A 'CARL' STORY</h5>
+      <p>
+        Imagin if Carl was in real life, and Russel would like to help him after knowing his situation. Russel would use
+        the app to post Carl's story so everyone could give a hand.
+      </p>
+    </div>
     <div class="block no-text-block">
-      <video playsinline autoplay loop muted id="wishup-intro-video">
+      <video playsinline autoplay loop muted class="appScreen" id="wishup-intro-video">
         <source src="./Assets/wishup-intro.mov" type="video/mp4" />
         Sorry it's a really nice video your browser failed to load.
       </video>
     </div>
   </div>
 
-  <div class="wrapper light-bg-f9f9f9">
+  <div class="wrapper odd light-bg-f9f9f9">
+    <div class="block no-text-block">
+      <img alt="Offer example" class="appScreen" src="./Assets/wishup-offer.png" />
+    </div>
     <div class="block">
+      <h5>HOW DO PEOPLE HELP?</h5>
       <p>
         Main actions that the audience can do to help Carl are: <strong>Wish luck</strong> to Carl,
         <strong>Donate</strong>, and <strong>Offer</strong> Carl something.
         And of course there are the sharing and commenting ones as well.
         <br /><br />
-        While the 'wish luck' (same concept as the 'like') and 'Donate' are fairly familiar, 'Offer' seems a bit different.
-        It's for someone who wants to help by offering something that is not money or the good luck wish.
+        'Wish luck' has the same concept as the 'like' on mainstream social media; 'Donate' is where people can quickly
+        make a donation so that the funds will be used to help Carl achieving his lifetime wish; 'Offer' is for someone
+        who would like to support Carl another way (e.g. accommodations, companionships, etc.).
       </p>
-    </div>
-    <div class="block no-text-block">
-      <img alt="Offer example" class="appScreen" src="./Assets/wishup-offer.png" />
     </div>
   </div>
 </section>
 
 <section>
-  <h3>IN PROGRESS</h3>
+  <h3 class="block-in">IN PROGRESS</h3>
 </section>
 
 
