bardot minor changes

--- a/bardot.html
+++ b/bardot.html
@@ -196,7 +196,7 @@
 </section>
 
 
-<section>
+<section id="bardot-learnings">
   <h3 class="block-in">LEARNINGS</h3>
   <div class="wrapper">
     <div class="block">
