--- a/scheckerIntro.html
+++ b/scheckerIntro.html
@@ -90,9 +90,9 @@
   <div class="wrapper">
 
       <div class="block">
-        <h5>INPUT SYMPTOM(s)</h5>
+        <h5>SYMPTOM(S) & QUESTIONS</h5>
         <p>
-          Tell the app your symptom(s).
+          Tell the app your symptom(s) and answer some relevant questions.
         </p>
       </div>
 
@@ -107,35 +107,6 @@
 
     <div class="wrapper odd">
 
-      <div class="block no-text-block">
-        <div class="hiw-video">
-          <video playsinline autoplay loop muted class="appScreen">
-            <source src="./Assets/schecker-hiw-answer.mov" type="video/mp4" />
-            Sorry it's a really nice video your browser failed to load.
-          </video>
-        </div>
-      </div>
-
-      <div class="block">
-        <h5 class="secondary-title">ANSWER SOME QUESTIONS</h5>
-        <p>
-          The app acts like a real doctor asking relevant questions to provide assessment.
-        </p>
-      </div>
-
-    </div>
-
-
-    <div class="wrapper">
-
-        <div class="block">
-          <h5 class="secondary-title">GET RESULT</h5>
-          <p>
-            AI is used to filter out questions base on the answers and analyse them to predict
-            diseases/conditions with high accuracy.
-          </p>
-        </div>
-
         <div class="block no-text-block">
           <div class="hiw result">
             <h6>YOU MIGHT HAVE</h6>
@@ -146,10 +117,25 @@
           </div>
         </div>
 
+        <div class="block">
+          <h5 class="secondary-title">GET RESULT</h5>
+          <p>
+            AI is used to filter out questions base on the answers and analyse them to predict
+            diseases/conditions with high accuracy.
+          </p>
+        </div>
+
     </div>
 
 
-    <div class="wrapper odd">
+    <div class="wrapper">
+
+      <div class="block">
+        <h5 class="secondary-title">BOOK APPOINTMENT</h5>
+        <p>
+          Painlessly book appointments with recommended doctors through a streamlined booking process.
+        </p>
+      </div>
 
       <div class="block no-text-block">
         <div class="hiw-video">
@@ -160,25 +146,10 @@
         </div>
       </div>
 
-      <div class="block">
-        <h5 class="secondary-title">BOOK APPOINTMENT</h5>
-        <p>
-          Painlessly book appointments with recommended doctors through a streamlined booking process.
-        </p>
-      </div>
-
     </div>
 
 
-    <div class="wrapper">
-
-      <div class="block">
-        <h5 class="secondary-title">TRACK SYMPTOMS</h5>
-        <p>
-          Whether ending up with a visit to the doctor's office or not, add the symptoms to watch list and update
-          their progression daily.
-        </p>
-      </div>
+    <div class="wrapper odd">
 
       <div class="block no-text-block">
         <div class="hiw-video">
@@ -187,6 +158,14 @@
             Sorry it's a really nice video your browser failed to load.
           </video>
         </div>
+      </div>
+
+      <div class="block">
+        <h5 class="secondary-title">TRACK SYMPTOMS</h5>
+        <p>
+          Whether ending up with a visit to the doctor's office or not, add the symptoms to watch list and update
+          their progression daily.
+        </p>
       </div>
 
     </div>
