footer updates (unfinished)

--- a/bardot.html
+++ b/bardot.html
@@ -240,7 +240,7 @@
     <a href="./index.html">Home</a>
     <a href="./scheckerIntro.html">Schecker</a>
     <a href="./myPlasticFootprint.html">MyPlasticFootprint</a>
-    <a href="./bardot.html">Bardot</a>
+    <a href="./WishUp.html">WishUp</a>
     <a href="./sa.html">Standards&nbsp;Australia</a>
     <a href="credits.html">Credits</a>
   </div>
