--- a/myPlasticFootprint.html
+++ b/myPlasticFootprint.html
@@ -84,7 +84,7 @@
   <h3 class="block-in">EARLY CONCEPT</h3>
     <h5 class="secondary-title block-in">SIMPLIFIED FLOW</h5>
     <img alt="wireframe" class="light-bg-f9f9f9 not-fullscreen-img block-in" src="./Assets/mpf-flow.png" />
-    <h5 class="secondary-title block-in">INITIAL WIREFRAME</h5>
+    <h5 class="secondary-title block-in">MEDIUM FIDELITY WIREFRAME<br /><small>of key screens</small></h5>
     <img alt="wireframe" class="light-bg-f9f9f9 not-fullscreen-img block-in" src="./Assets/mpf-wireframe.png" />
 
     <h5 class="block-in">USER PERSONAS</h5>
@@ -201,29 +201,46 @@
 
 
 
-
-
-
-
-
 <section>
   <h3 class="block-in">IN PROGRESS</h3>
+  <div class="wrapper">
+    <p>
+      This idea is still in the concept phase. A more detailed introduction will be updated once done.
+    </p>
+  </div>
 </section>
 
 
 
 
 
+
+
+
+
+
 <footer>
-  <small class="copyright">	&#169; 2019 NHUT H. DON</small>
-  <div class="footer-links">
-    <a href="./index.html">Home</a>
-    <a href="./scheckerIntro.html">Schecker</a>
-    <a href="./WishUp.html">WishUp</a>
-    <a href="./bardot.html">Bardot</a>
-    <a href="./sa.html">Standards&nbsp;Australia</a>
-    <a href="./credits.html">Credits</a>
+  <div class="footer-top">
+    <h5>MY OTHER WORKS</h5>
+    <div class="footer-top-links">
+      <a href="./scheckerIntro.html">Schecker</a>
+      <a href="./WishUp.html">WishUp</a>
+      <a href="./bardot.html">Bardot</a>
+      <a href="./sa.html">Standards&nbsp;Australia</a>
+    </div>
   </div>
+  <div class="footer-bottom">
+    <small class="copyright">	&#169; 2019 NHUT H. DON</small>
+    <div class="footer-links">
+      <a href="./index.html">Home</a>
+      <a href="./scheckerIntro.html">Schecker</a>
+      <a href="./WishUp.html">WishUp</a>
+      <a href="./bardot.html">Bardot</a>
+      <a href="./sa.html">Standards&nbsp;Australia</a>
+      <a href="./credits.html">Credits</a>
+    </div>
+  </div>
+
 </footer>
 
 
