--- a/scheckerIntro.html
+++ b/scheckerIntro.html
@@ -175,12 +175,12 @@
 <section>
   <h3 class="block-in">EARLY CONCEPT</h3>
   <div id="schecker-draggable-flow" class="block-in">
-    <h5 class="secondary-title">USER FLOW</h5>
+    <h5 class="secondary-title">USER FLOW<br /><small>(drag to view)</small></h5>
     <img alt="user flow" id="schecker-userFlow" src="./Assets/schecker-simplifiedFlow.png" />
   </div>
 
 
-    <h5 class="secondary-title block-in">INITIAL WIREFRAME</h5>
+    <h5 class="secondary-title block-in">LOW FIDELITY WIREFRAME</h5>
     <img alt="wireframe" class="light-bg-f9f9f9 not-fullscreen-img block-in" src="./Assets/schecker-wireframe.png" />
     <h5 class="secondary-title block-in">UI COMPONENTS</h5>
     <img alt="UI Components" class="light-bg-f9f9f9 not-fullscreen-img block-in" src="./Assets/schecker-uiComponents.png" />
