finalised footer, About text changed

--- a/WishUp.html
+++ b/WishUp.html
@@ -158,14 +158,22 @@
 
 
 <footer>
-  <small class="copyright">	&#169; 2019 NHUT H. DON</small>
-  <div class="footer-links">
-    <a href="./index.html">Home</a>
-    <a href="./scheckerIntro.html">Schecker</a>
-    <a href="./myPlasticFootprint.html">MyPlasticFootprint</a>
-    <a href="./bardot.html">Bardot</a>
-    <a href="./sa.html">Standards&nbsp;Australia</a>
-    <a href="credits.html">Credits</a>
+  <div class="footer-top">
+    <h5>MY OTHER WORKS</h5>
+    <div class="footer-top-links">
+      <a href="./myPlasticFootprint.html">MyPlasticFootprint</a>
+      <a href="./scheckerIntro.html">Schecker</a>
+      <a href="./bardot.html">Bardot</a>
+      <a href="./sa.html">Standards&nbsp;Australia</a>
+    </div>
+  </div>
+  <div class="footer-bottom">
+    <small class="copyright">	&#169; 2019 NHUT H. DON</small>
+    <div class="footer-links">
+      <a href="./index.html">Home</a>
+      <a href="./index.html#about" rel="m_PageScroll2id">About</a>
+      <a href="./credits.html">Credits</a>
+    </div>
   </div>
 </footer>
 
