--- a/index.html
+++ b/index.html
@@ -9,7 +9,6 @@
   <meta name="author" content="Nhut H. Don">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-  <!-- <link rel="icon" type="image/png" href="./Assets/favicon.png"> -->
   <link rel="apple-touch-icon" sizes="180x180" href="./Assets/apple-touch-icon.png">
   <link rel="icon" type="image/png" sizes="32x32" href="./Assets/favicon-32x32.png">
   <link rel="icon" type="image/png" sizes="16x16" href="./Assets/favicon-16x16.png">
@@ -83,7 +82,7 @@
       <li><a href="#projects" rel="m_PageScroll2id">Featured Project</a></li>
       <li><a href="#other-concepts" rel="m_PageScroll2id">In incubation</a></li>
       <li><a href="#works" rel="m_PageScroll2id">Past experience</a></li>
-      <li><a href="#about" rel="m_PageScroll2id">Me</a></li>
+      <li><a href="#about" rel="m_PageScroll2id">About</a></li>
     </ul>
   </div>
   <i>nhuthoangdon@gmail.com</i>
@@ -176,8 +175,8 @@
 
     <h3 class="ease-in-o">IDEAS IN INCUBATION</h3>
 
-    <div class="content-wrapper wrapper-incubation ease-in-o">
-      <div class="incubation-tile" id="plasticFootprint-tile">
+    <div class="content-wrapper wrapper-incubation">
+      <div class="incubation-tile ease-in-o" id="plasticFootprint-tile">
         <video playsinline autoplay loop muted id="mpf-video">
           <source src="./Assets/hd15756.mov" type="video/mp4" />
           Sorry it's a really nice video your browser failed to load.
@@ -204,8 +203,8 @@
 
       </div>
 
-    <div class="content-wrapper wrapper-incubation ease-in-o">
-      <div class="incubation-tile" id="wishUp-tile">
+    <div class="content-wrapper wrapper-incubation">
+      <div class="incubation-tile ease-in-o" id="wishUp-tile">
         <img id="wishUp-mockup-ip" alt="WishUp Screen" src="./Assets/wishUp-mockup-ip.png" />
       </div>
       <span class="decorative-line ease-in-o"></span>
@@ -273,15 +272,20 @@
 <section class="side-projects" id="about">
   <div class="content-wrapper">
     <div class="content-column">
-      <h5 class="small-label ease-in-a">SO...</h5>
+      <h5 class="small-label ease-in-a">ABOUT</h5>
       <p class="ease-in-a">
-        I am looking for a work opportunity worldwide and working on realising my ideas.
-        If you find any of them interesting or got me an offer, please feel free to
-        drop me a line. I'll be happy to collaborate.
-        <br />
-        <br />
-        <i class="ease-in-a">Social media isn't my cup of coffee, but I'm very reachable at
-                             <a href="mailto:nhuthoangdon@gmail.com">nhuthoangdon@gmail.com</a>.</i>
+        I graduated in Multimedia Design and started my UX/UI career after an internship at S60, where I later
+        progressed as an in-house designer and had the chance to work with some amazing people.
+        <br /><br />
+        Throughout my job, I've gained lots of experience working on projects such as Bardot, Standards Australia,
+        Radio Rentals, My7Christmas and ShaverShop.
+        <br /><br />
+        I am now working on advancing my career and doing something about my ideas, as well as looking for
+        traveling/relocating opportunities as I have a passion for adventures and would very much love to
+        experience different cultures.
+        <br /><br />
+        <i class="ease-in-a">Sorry social media isn't my cup of coffee. If you would like to contact me, please
+                             <a href="mailto:nhuthoangdon@gmail.com">send me an email</a>.</i>
         </p>
     </div>
 
