--- a/myPlasticFootprint.html
+++ b/myPlasticFootprint.html
@@ -87,114 +87,7 @@
     <h5 class="secondary-title block-in">MEDIUM FIDELITY WIREFRAME<br /><small>of key screens</small></h5>
     <img alt="wireframe" class="light-bg-f9f9f9 not-fullscreen-img block-in" src="./Assets/mpf-wireframe.png" />
 
-    <h5 class="block-in">USER PERSONAS</h5>
 
-    <div class="wrapper not-fullscreen rachel">
-
-      <div class="block no-text-block">
-        <img alt="User 1" class="user-example" src="./Assets/mpf-rachel.svg" />
-      </div>
-
-        <div class="block">
-          <h5>RACHEL</h5>
-          <p>
-            23, freshly graduated, millennial, trendy, vegan, not into 9-5 jobs, currently traveling the world,
-            loves Yoga poses, loves everything organic, loves hastags, has high environmental concerns, has 3 (very)
-            active social media accounts, dream occupation: travel blogger/influencer.
-          </p>
-        </div>
-
-        <div class="block">
-          <h5 class="secondary-title">RACHEL GOES GREEN</h5>
-          <p>
-            Rachel saw the app from an ad on Facebook. Being well aware of human's excessive use of plastic
-            through social media, Rachel immediately downloaded the app. Rachel started by adding all plastic
-            and recycled/environmental friendly products she was having and realised she's still made more of a negative
-            impact. <br /><br />
-            Since then, Rachel's been determined to reduce her plastic footprint by not buying any single-use plastic
-            product, and trying to use only eco-friendly ones. <br /> <br />
-            For every goal met, Rachel shares her progress on social media and soon influenced many of her friends and
-            followers to download and use the app.
-          </p>
-        </div>
-
-        <div class="block no-text-block">
-            <img alt="use case" class="appScreen" src="./Assets/mpf-rachel-insta.png" />
-        </div>
-
-      </div>
-
-
-
-      <div class="wrapper not-fullscreen dad">
-
-        <div class="block no-text-block">
-          <img alt="User 2" class="user-example" id="rachels-dad" src="./Assets/mpf-rachelsDad.svg" />
-        </div>
-
-          <div class="block">
-            <h5>RACHEL'S DAD</h5>
-            <p>
-              58, homemaker, former accountant, nerdy, loves gardening, has one social media account with 14 friends
-              (12 of which are family members & relatives, 2 unknowns from random friend requests),
-              interested in world news & politics.
-            </p>
-          </div>
-
-          <div class="block">
-            <h5 class="secondary-title">DAD GOES GREEN</h5>
-            <p>
-              Rachel made Rachel's dad install the app. Rachel's dad is aware of
-              the environmental issues from TV and newspapers but believed that the problem must be
-              solved by the top people (i.e. governments and large corps).
-              <br /><br />
-              Rachel's dad used the app reluctantly. App sends notifications of recycling facts and reminders
-              frequently (not too frequent though, otherwise, dad'd be annoyed). Eventually, Rachel's dad has
-              subconsciously felt obliged to use the app.
-              <br /><br />
-              Rachel's dad does not always remember to track every item used/recycled. But is motivated enough
-              to change some habits (cycling instead of driving, less plastic wrap, etc.).
-            </p>
-          </div>
-
-          <div class="block no-text-block">
-              <img alt="use case" src="./Assets/mpf-dadgoesgreen.svg" />
-          </div>
-
-        </div>
-
-
-        <div class="wrapper not-fullscreen granny">
-
-          <div class="block no-text-block">
-            <img alt="User 2" id="rachels-granny" src="./Assets/mpf-rachelsGranny.png" />
-          </div>
-
-            <div class="block">
-              <h5>RACHEL'S GRANNY</h5>
-              <p>
-                81, widowed, friendly, loving, caring, easy-going, talks to Siri sometimes, enjoys houseworks,
-                been through hard times, (almost) never throws away stuff, loves the 'old days'.
-              </p>
-            </div>
-
-            <div class="block">
-              <h5 class="secondary-title">GRANNY GOES GREEN(ER)</h5>
-              <p>
-                Rachel's granny has already been recycling just about everything. Rachel told granny that the app
-                would reward her recycling efforts.<br /><br />
-                App's interface is intuitive, granny quickly learned to use it. Granny loves to do stuff,
-                and takes it seriously. <br /> <br />
-                Granny tracks every single item recycled, and soon get on top of the leaderboard with unbeatable
-                records.
-              </p>
-            </div>
-
-            <div class="block no-text-block">
-                <img alt="use case" class="appScreen" src="./Assets/mpf-grannygoesgreen.png" />
-            </div>
-
-          </div>
 
 
 </section>
@@ -233,14 +126,10 @@
     <small class="copyright">	&#169; 2019 NHUT H. DON</small>
     <div class="footer-links">
       <a href="./index.html">Home</a>
-      <a href="./scheckerIntro.html">Schecker</a>
-      <a href="./WishUp.html">WishUp</a>
-      <a href="./bardot.html">Bardot</a>
-      <a href="./sa.html">Standards&nbsp;Australia</a>
+      <a href="./index.html#about" rel="m_PageScroll2id">About</a>
       <a href="./credits.html">Credits</a>
     </div>
   </div>
-
 </footer>
 
 
