--- a/bardot.html
+++ b/bardot.html
@@ -135,16 +135,16 @@
   </div>
 
   <div class="wrapper big-col">
-    <h5>MINI LOGIN - CART - WISHLIST</h5>
-    <video playsinline autoplay loop muted class="desktop-screen">
+    <h5 class="block-in">MINI LOGIN - CART - WISHLIST</h5>
+    <video playsinline autoplay loop muted class="desktop-screen block-in">
       <source src="./Assets/bardot-login-cart-wishlist.mov" type="video/mp4" />
       Sorry it's a really nice video your browser failed to load.
     </video>
   </div>
 
   <div class="wrapper big-col">
-    <h5>MEGA DROPDOWN MENU</h5>
-    <video playsinline autoplay loop muted class="desktop-screen">
+    <h5 class="block-in">MEGA DROPDOWN MENU</h5>
+    <video playsinline autoplay loop muted class="desktop-screen block-in">
       <source src="./Assets/bardot-megaMenu.mov" type="video/mp4" />
       Sorry it's a really nice video your browser failed to load.
     </video>
@@ -170,8 +170,8 @@
   </div>
 
   <div class="wrapper big-col">
-    <h5>STORE FINDER</h5>
-    <img alt="Find a store" class="desktop-screen" id="bardot-findStore-img" src="./Assets/bardot-findStore.png" />
+    <h5 class="block-in">STORE FINDER</h5>
+    <img alt="Find a store" class="desktop-screen block-in" id="bardot-findStore-img" src="./Assets/bardot-findStore.png" />
   </div>
 
   <div class="wrapper">
