--- a/index.html
+++ b/index.html
@@ -170,6 +170,35 @@
 
 
 
+<!-- Work Showcase Section -->
+<section class="side-projects" id="works">
+
+  <h3 class="ease-in-w">PAST EXPERIENCE</h3>
+
+  <div class="content-wrapper ease-in-w">
+
+    <div class="project-tile" id="bardot-tile">
+      <a class="video-overlay" id="bardot-overlay" href="#">
+        <img class="other-logo" alt="Bardot" src="./Assets/logo_bardot.png" />
+      </a>
+      <div class="tile-bg" id="bardot-tile-bg"></div>
+    </div>
+
+    <div class="project-tile" id="sa-tile">
+      <a class="video-overlay" id="sa-overlay" href="#">
+        <img class="other-logo" alt="Standards Australia" src="./Assets/logo_sa.png" />
+      </a>
+      <div class="tile-bg" id="sa-tile-bg"></div>
+    </div>
+
+  </div>
+
+</section>
+
+
+
+
+
 
 <section class="side-projects" id="other-concepts">
 
@@ -235,38 +264,6 @@
 
 
 
-<!-- Work Showcase Section -->
-<section class="side-projects" id="works">
-
-  <h3 class="ease-in-w">PAST EXPERIENCE</h3>
-
-  <div class="content-wrapper ease-in-w">
-
-    <div class="project-tile" id="bardot-tile">
-      <a class="video-overlay" id="bardot-overlay" href="#">
-        <img class="other-logo" alt="Bardot" src="./Assets/logo_bardot.png" />
-      </a>
-      <div class="tile-bg" id="bardot-tile-bg"></div>
-    </div>
-
-    <div class="project-tile" id="sa-tile">
-      <a class="video-overlay" id="sa-overlay" href="#">
-        <img class="other-logo" alt="Standards Australia" src="./Assets/logo_sa.png" />
-      </a>
-      <div class="tile-bg" id="sa-tile-bg"></div>
-    </div>
-
-  </div>
-
-</section>
-
-
-
-
-
-
-
-
 
 
 <section class="side-projects" id="about">
@@ -281,7 +278,7 @@
         Radio Rentals, My7Christmas and ShaverShop.
         <br /><br />
         I am now working on advancing my career and doing something about my ideas, as well as looking for
-        traveling/relocating opportunities as I have a passion for adventures and would very much love to
+        travel/relocation opportunities as I have a passion for adventures and would very much love to
         experience different cultures.
         <br /><br />
         <i class="ease-in-a">Sorry social media isn't my cup of coffee. If you would like to contact me, please
