mpf concept updates

--- a/WishUp.html
+++ b/WishUp.html
@@ -145,8 +145,13 @@
   </div>
 </section>
 
+
+
+
 <section>
-  <h3 class="block-in">IN PROGRESS</h3>
+  <div class="wrapper">
+    <h3 class="block-in">MORE TO COME</h3>
+  </div>
 </section>
 
 
