--- a/myPlasticFootprint.html
+++ b/myPlasticFootprint.html
@@ -80,8 +80,21 @@
 
 
 
-<section>
+<section id="mpf-early-concept">
   <h3 class="block-in">EARLY CONCEPT</h3>
+  <div class="wrapper">
+    <div class="block">
+      <p>
+        The concept is fairly simple. For each plastic item purchased, mark one negative impact on the 'consumed'
+        profile, and for each item recycled, mark one positive impact on the 'recycled' profile (e.g. if you buy a plastic
+        bottle of water, mark the 'consumed'. If you later recycle that very bottle, mark the 'recycled'; on the other hand,
+        if you throw it away, mark the 'consumed' once more). At the end of the day, you will be able to see how many items
+        you've consumed and recycled. If you recycle the same amount of plastics as you consume, you'll have a neutral
+        impact. If you consume more than recycle, that means a bad impact. And if you only consume recycled/environmentally
+        friendly products, a good green impact it certainly is.
+      </p>
+    </div>
+  </div>
     <h5 class="secondary-title block-in">SIMPLIFIED FLOW</h5>
     <img alt="wireframe" class="light-bg-f9f9f9 not-fullscreen-img block-in" src="./Assets/mpf-flow.png" />
     <h5 class="secondary-title block-in">MEDIUM FIDELITY WIREFRAME<br /><small>of key screens</small></h5>
@@ -95,11 +108,8 @@
 
 
 <section>
-  <h3 class="block-in">IN PROGRESS</h3>
   <div class="wrapper">
-    <p>
-      This idea is still in the concept phase. A more detailed introduction will be updated once done.
-    </p>
+    <h3 class="block-in">MORE TO COME</h3>
   </div>
 </section>
 
