spacing & img adjusted

--- a/bardot.html
+++ b/bardot.html
@@ -128,11 +128,12 @@
 
 
 
-  <div class="wrapper">
+  <div class="wrapper light-bg-f9f9f9">
     <div class="block no-text-block">
       <img alt="Mobile Search" src="./Assets/bardot-m-search.png" />
     </div>
   </div>
+
 
   <div class="wrapper big-col">
     <h5 class="block-in">MINI LOGIN - CART - WISHLIST</h5>
@@ -142,12 +143,14 @@
     </video>
   </div>
 
-  <div class="wrapper big-col">
-    <h5 class="block-in">MEGA DROPDOWN MENU</h5>
-    <video playsinline autoplay loop muted class="desktop-screen block-in">
-      <source src="./Assets/bardot-megaMenu.mov" type="video/mp4" />
-      Sorry it's a really nice video your browser failed to load.
-    </video>
+  <div class="light-bg-f9f9f9">
+    <div class="wrapper big-col">
+      <h5 class="block-in">MEGA DROPDOWN MENU</h5>
+      <video playsinline autoplay loop muted class="desktop-screen block-in">
+        <source src="./Assets/bardot-megaMenu.mov" type="video/mp4" />
+        Sorry it's a really nice video your browser failed to load.
+      </video>
+    </div>
   </div>
 
 
@@ -163,23 +166,20 @@
     </div>
   </div>
 
-  <div class="wrapper">
-    <div class="block no-text-block">
-      <img alt="Mobile Search" src="./Assets/bardot-M-locateInStore.png" />
+  <div class="light-bg-f9f9f9">
+    <div class="wrapper big-col">
+      <h5 class="block-in">STORE FINDER</h5>
+      <img alt="Find a store" class="desktop-screen block-in" id="bardot-findStore-img" src="./Assets/bardot-findStore.png" />
     </div>
   </div>
 
-  <div class="wrapper big-col">
-    <h5 class="block-in">STORE FINDER</h5>
-    <img alt="Find a store" class="desktop-screen block-in" id="bardot-findStore-img" src="./Assets/bardot-findStore.png" />
-  </div>
 
   <div class="wrapper">
     <div class="block small-block">
       <h5>PRODUCT BADGES</h5>
       <p>
-        5 types of badges required. Each had to be visually distinguish from one another and fit well within each product
-        tile (maximum of 4 badges per product).
+        5 types of badges required. Each had to be visually distinguish from one another and fit well together within
+        each product tile (maximum of 4 badges per product).
       </p>
     </div>
     <div class="block no-text-block big-block">
@@ -238,10 +238,10 @@
   <div class="footer-top">
     <h5>MY OTHER WORKS</h5>
     <div class="footer-top-links">
-      <a href="./myPlasticFootprint.html">MyPlasticFootprint</a>
-      <a href="./WishUp.html">WishUp</a>
       <a href="./scheckerIntro.html">Schecker</a>
       <a href="./sa.html">Standards&nbsp;Australia</a>
+      <a href="./myPlasticFootprint.html">MyPlasticFootprint</a>
+      <a href="./WishUp.html">WishUp</a>
     </div>
   </div>
   <div class="footer-bottom">
