home links updated

--- a/index.html
+++ b/index.html
@@ -80,8 +80,8 @@
     <ul>
       <li><a href="#home-intro" rel="m_PageScroll2id">Home</a></li>
       <li><a href="#projects" rel="m_PageScroll2id">Featured Project</a></li>
-      <li><a href="#other-concepts" rel="m_PageScroll2id">In incubation</a></li>
       <li><a href="#works" rel="m_PageScroll2id">Past experience</a></li>
+      <li><a href="#other-concepts" rel="m_PageScroll2id">In incubation</a></li>  
       <li><a href="#about" rel="m_PageScroll2id">About</a></li>
     </ul>
   </div>
@@ -141,9 +141,9 @@
 
   <div class="content-wrapper">
         <!-- Iphone mockup -->
-        <div class="device-wrapper ease-in">
+        <a href="./scheckerIntro.html" class="device-wrapper ease-in">
           <img class="mockup-screens" id="schecker-mockups" alt="Screen mockups" src="./Assets/home-schecker-mockups.png" />
-        </div>
+        </a>
 
    <!-- Project Description -->
     <div class="content-column" id="latest-concept">
@@ -178,14 +178,14 @@
   <div class="content-wrapper ease-in-w">
 
     <div class="project-tile" id="bardot-tile">
-      <a class="video-overlay" id="bardot-overlay" href="#">
+      <a class="video-overlay" id="bardot-overlay" href="./bardot.html">
         <img class="other-logo" alt="Bardot" src="./Assets/logo_bardot.png" />
       </a>
       <div class="tile-bg" id="bardot-tile-bg"></div>
     </div>
 
     <div class="project-tile" id="sa-tile">
-      <a class="video-overlay" id="sa-overlay" href="#">
+      <a class="video-overlay" id="sa-overlay" href="./sa.html">
         <img class="other-logo" alt="Standards Australia" src="./Assets/logo_sa.png" />
       </a>
       <div class="tile-bg" id="sa-tile-bg"></div>
@@ -205,12 +205,12 @@
     <h3 class="ease-in-o">IDEAS IN INCUBATION</h3>
 
     <div class="content-wrapper wrapper-incubation">
-      <div class="incubation-tile ease-in-o" id="plasticFootprint-tile">
+      <a href="./myPlasticFootprint.html" class="incubation-tile ease-in-o" id="plasticFootprint-tile">
         <video playsinline autoplay loop muted id="mpf-video">
           <source src="./Assets/hd15756.mov" type="video/mp4" />
           Sorry it's a really nice video your browser failed to load.
         </video>
-      </div>
+      </a>
       <span class="decorative-line ease-in-o"></span>
       <div class="content-column">
         <h5 class="small-label ease-in-o">MY PLASTIC FOOTPRINT</h5>
@@ -233,9 +233,9 @@
       </div>
 
     <div class="content-wrapper wrapper-incubation">
-      <div class="incubation-tile ease-in-o" id="wishUp-tile">
+      <a href="./WishUp.html" class="incubation-tile ease-in-o" id="wishUp-tile">
         <img id="wishUp-mockup-ip" alt="WishUp Screen" src="./Assets/wishUp-mockup-ip.png" />
-      </div>
+      </a>
       <span class="decorative-line ease-in-o"></span>
       <div class="content-column">
         <h5 class="small-label ease-in-o">WISHUP</h5>
