sa almost finished

--- a/bardot.html
+++ b/bardot.html
@@ -134,18 +134,19 @@
     </div>
   </div>
 
-
-  <div class="wrapper big-col">
+  <div class="big-img-wrapper">
     <h5 class="block-in">MINI LOGIN - CART - WISHLIST</h5>
-    <video playsinline autoplay loop muted class="desktop-screen block-in">
-      <source src="./Assets/bardot-login-cart-wishlist.mov" type="video/mp4" />
-      Sorry it's a really nice video your browser failed to load.
-    </video>
+    <div class="wrapper big-col">
+      <video playsinline autoplay loop muted class="desktop-screen block-in">
+        <source src="./Assets/bardot-login-cart-wishlist.mov" type="video/mp4" />
+        Sorry it's a really nice video your browser failed to load.
+      </video>
+    </div>
   </div>
 
-  <div class="light-bg-f9f9f9">
+  <div class="big-img-wrapper light-bg-f9f9f9">
+    <h5 class="block-in">MEGA DROPDOWN MENU</h5>
     <div class="wrapper big-col">
-      <h5 class="block-in">MEGA DROPDOWN MENU</h5>
       <video playsinline autoplay loop muted class="desktop-screen block-in">
         <source src="./Assets/bardot-megaMenu.mov" type="video/mp4" />
         Sorry it's a really nice video your browser failed to load.
@@ -166,9 +167,9 @@
     </div>
   </div>
 
-  <div class="light-bg-f9f9f9">
-    <div class="wrapper big-col">
-      <h5 class="block-in">STORE FINDER</h5>
+  <div class="big-img-wrapper light-bg-f9f9f9">
+    <h5 class="block-in">STORE FINDER</h5>
+    <div class="wrapper big-col">      
       <img alt="Find a store" class="noShadow-img block-in" src="./Assets/bardot-findStore.png" />
     </div>
   </div>
