--- a/myPlasticFootprint.html
+++ b/myPlasticFootprint.html
@@ -95,10 +95,14 @@
       </p>
     </div>
   </div>
-    <h5 class="secondary-title block-in">SIMPLIFIED FLOW</h5>
-    <img alt="wireframe" class="light-bg-f9f9f9 not-fullscreen-img block-in" src="./Assets/mpf-flow.png" />
-    <h5 class="secondary-title block-in">MEDIUM FIDELITY WIREFRAME<br /><small>of key screens</small></h5>
-    <img alt="wireframe" class="light-bg-f9f9f9 not-fullscreen-img block-in" src="./Assets/mpf-wireframe.png" />
+
+  <div class="big-img-wrapper light-bg-f9f9f9">
+    <h5 class="block-in">SIMPLIFIED FLOW</h5>
+    <img alt="wireframe" class="block-in" src="./Assets/mpf-flow.png" />
+    <h5 class="block-in">MEDIUM FIDELITY WIREFRAME<br /><small>of key screens</small></h5>
+    <img alt="wireframe" class="block-in" src="./Assets/mpf-wireframe.png" />
+  </div>
+
 
 
 
