--- a/sa.html
+++ b/sa.html
@@ -106,11 +106,21 @@
   <div class="wrapper big-col">
     <h5 class="block-in">MULTI-TIER MENU</h5>
     <img class="noShadow-img" alt="Multi-level Menu" src="./Assets/sa-menu.png" />
-  </div>
-
-  <div class="wrapper light-bg-f9f9f9">
     <div class="block no-text-block">
       <img alt="Menu on Mobile" class="appScreen" src="./Assets/sa-m-menu.png" />
+    </div>
+  </div>
+
+
+  <div class="wrapper odd light-bg-f9f9f9">
+    <div class="block no-text-block">
+      <img alt="Category Styling" class="noShadow-img" src="./Assets/sa-categoryColours.png" />
+    </div>
+    <div class="block small-block">
+      <h5>STANDARDS CATEGORY STYLING</h5>
+      <p>
+        Each Standards Category is assigned a monochromatic set of coloured blocks.
+      </p>
     </div>
   </div>
 
@@ -138,21 +148,27 @@
     </div>
   </div>
 
-  <div class="light-bg-f9f9f9">
+  <div class="big-img-wrapper light-bg-f9f9f9">
+    <h5 class="block-in">STANDARD INFO PAGES</h5>
     <div class="wrapper big-col">
-      <h5 class="block-in">STANDARD INFO PAGES</h5>
-        <img alt="Info Pages" class="noShadow-img" src="./Assets/sa-infoPages.png" />
+      <img alt="Info Pages" class="noShadow-img" src="./Assets/sa-infoPages.png" />
+      <div class="block big-block no-text-block" id="sa-info-m-img-block">
+        <img alt="Info pages mobile" src="./Assets/sa-m-infoPages.png" />
+      </div>
     </div>
   </div>
 
   <div class="wrapper">
     <div class="block small-block">
-      <h5>POPUP & FORM</h5>
+      <h5>FORM &amp; POPUP STYLING</h5>
     </div>
     <div class="block big-block no-text-block">
-      <img alt="Popups & Forms" class="noShadow-img" src="./Assets/sa-popup.png" />
+      <img alt="Form" class="noShadow-img" src="./Assets/sa-popup.png" />
     </div>
   </div>
+
+
+
 
 
 
