--- a/scheckerIntro.html
+++ b/scheckerIntro.html
@@ -49,7 +49,7 @@
       <li><a href="bardot.html">Bardot</a></li>
       <li><a href="sa.html">Standards Australia</a></li>
       <li><a href="myPlasticFootprint.html">MyPlasticFootprint</a></li>
-      <li><a href="WishUp.html">WishUp</a></li>  
+      <li><a href="WishUp.html">WishUp</a></li>
     </ul>
   </div>
   <i>nhuthoangdon@gmail.com</i>
@@ -179,11 +179,16 @@
     <img alt="user flow" id="schecker-userFlow" src="./Assets/schecker-simplifiedFlow.png" />
   </div>
 
+  <div class="big-img-wrapper light-bg-f9f9f9">
+    <h5 class="block-in">LOW FIDELITY WIREFRAME</h5>
+    <img alt="wireframe" class="block-in" src="./Assets/schecker-wireframe.png" />
 
-    <h5 class="secondary-title block-in">LOW FIDELITY WIREFRAME</h5>
-    <img alt="wireframe" class="light-bg-f9f9f9 not-fullscreen-img block-in" src="./Assets/schecker-wireframe.png" />
     <h5 class="secondary-title block-in">UI COMPONENTS</h5>
     <img alt="UI Components" class="light-bg-f9f9f9 not-fullscreen-img block-in" src="./Assets/schecker-uiComponents.png" />
+
+  </div>
+
+
 </section>
 
 
