--- a/sa.html
+++ b/sa.html
@@ -167,10 +167,14 @@
     </div>
   </div>
 
-
-
-
-
+  <div class="wrapper odd light-bg-f9f9f9">
+    <div class="block no-text-block">
+      <img alt="eDM" class="appScreen" src="./Assets/sa-eDM.png" />
+    </div>
+    <div class="block small-block">
+      <h5>EDM STYLING</h5>
+    </div>
+  </div>
 
 </section>
 
@@ -186,9 +190,12 @@
   <div class="wrapper">
     <div class="block">
       <p>
-        The project involved many stakeholders. Therefore, the communication had to be smooth, otherwise,
-        the outcomes could be disastrous. Having been through similar projects facing the same problems, we had created
-        a uniform communication process in which we made sure everyone was on track of even the slightest changes.
+        The project was not too heavy UX/UI-wise, but consistency and details were very important. The client had
+        clear requirements on margins, length and visibility of contents above the fold and expected the
+        display to retain the same across different screen dimensions. Therefore, we did a lot of responsive testing.
+        As our usual design process, we created a uniform styleguide to use in the designs and development,
+        but still ran into inconsistency problems due to the amount of tailor-made contents. Lesson learned is that
+        flexibility is also important because every client is different.
       </p>
     </div>
   </div>
